Fixed improper scaling on mobile devices

--- a/css/skyelite_pfd.css
+++ b/css/skyelite_pfd.css
@@ -118,7 +118,7 @@
 
 #controls-container {
     position: absolute;
-    bottom: 0vh;
+    bottom: 1vh;
     right: 0vw;
     width: 100%;
     z-index: 9999;
@@ -164,7 +164,7 @@
 
 #inset_adf {
     position: absolute;
-    top: 11vh;
+    top: 10vh;
     right: 0.1vw;
     width: 15vw;
     z-index: 9999;
@@ -219,7 +219,7 @@
 
 #inset_engine {
     position: absolute;
-    top: 18.5vh;
+    top: 18vh;
     right: 0vw;
     width: 20vw;
     /* height: 18vh; */
@@ -463,7 +463,7 @@
 
 #lower_box_container {
     position: absolute;
-    top: 3vw;
+    top: 2.4vw;
     left: 0.1vw;
     /* width: 40%; */
     /* height: 6vh; */
@@ -522,7 +522,7 @@
     /*border: 1px solid whitesmoke;*/
     background-color: #36393b;
     color: white;
-    font-size: 2vh;
+    font-size: 1.2vh;
     font-weight: 700;
 }
 
@@ -533,7 +533,7 @@
     }
     
     #status_box_container small {
-        font-size: 1.5vh !important;
+        font-size: 1.1vh !important;
     }
 
 #map_status_box_container {
